✨ feature(scripts): modify extra service to be simpler